--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -22,7 +22,7 @@
                     <a href="{% url 'new_entry' %}">Create new page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'random_entry' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
