--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -6,4 +6,8 @@
 
 {% block body %}
     {{ entry|safe }}
+
+    <div>
+        <a href="{% url 'edit_entry' title=title %}">Edit</a>
+    </div>
 {% endblock %}
