add active listings on homepage

--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -34,7 +34,9 @@
             {% endif %}
         </ul>
         <hr>
-        {% block body %}
-        {% endblock %}
+        <main class="container">
+            {% block body %}
+            {% endblock %}
+        </main>
     </body>
 </html>
