--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,7 +1,28 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
+    {% if active_listings %}
     <h2>Active Listings</h2>
-
-    TODO
+    {% for listing in active_listings %}
+        <div class="row mb-2">
+            <div class="col-12">
+                <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col-12 col-lg-3">
+                        <img class="img-fluid" src={{listing.image_url|default_if_none:'http://via.placeholder.com/640x360'}}>
+                    </div>
+                    <div class="col-12 col-lg-9 p-4">
+                        <strong class="d-inline-block mb-2 text-primary">
+                            {{ listing.category|default_if_none:"" }}
+                        </strong>
+                        <h3 class="mb-0">{{listing.title}}</h3>
+                        <div class="mb-1 text-body-secondary"><strong>Price:</strong> ${{ listing.price }}</div>
+                        <p class="card-text mb-auto">{{listing.description}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+    {% else %}
+        <h2>No active listings</h2>
+    {% endif %}
 {% endblock %}
