--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -14,7 +14,7 @@
                         <strong class="d-inline-block mb-2 text-primary">
                             {{ listing.category|default_if_none:"" }}
                         </strong>
-                        <h3 class="mb-0">{{listing.title}}</h3>
+                        <h3 class="mb-0"><a href="{% url 'listing' listing.id %}">{{listing.title}}</a></h3>
                         <div class="mb-1 text-body-secondary"><strong>Price:</strong> ${{ listing.price }}</div>
                         <p class="card-text mb-auto">{{listing.description}}</p>
                     </div>
