--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -24,8 +24,8 @@
                                 {% else %}
                                     <a href="{% url 'unwatch' listing.id %}" class="btn btn-warning">Watchlist</a>
                                 {% endif %}
-                                {% if user == listing.owner %}
-                                <button type="button" class="btn btn-danger">Close auction</button>
+                                {% if user == listing.owner and listing.is_active %}
+                                <a href="{% url 'close_auction' listing.id %}"  class="btn btn-danger">Close auction</a>
                                 {% endif %}
                             {% endif %}
                         </div>
@@ -36,23 +36,31 @@
                 <h3>Bids</h3>
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col-12 p-4">
-                        <div class="mb-1"><strong>current number of bids on this item:</strong> {{ listing.bids.count }}</div>
-                        {% if user.is_authenticated %}
-                        <div class="mb-1 mt-2 text-body-secondary">
-                            {% if winning_bid is not None and winning_bid.author == user %}
-                            <div class="mb-1"><strong>your bid is the current bid.</strong></div>
+                        {% if listing.is_active %}
+                            <div class="mb-1"><strong>current number of bids on this item:</strong> {{ listing.bids.count }}</div>
+                            {% if user.is_authenticated %}
+                            <div class="mb-1 mt-2 text-body-secondary">
+                                {% if winning_bid is not None and winning_bid.author == user %}
+                                <div class="mb-1"><strong>your bid is the current bid.</strong></div>
+                                {% endif %}
+                                
+                                <form action="{% url 'new_listing' %}" method="post">
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <label for="bid">place a bid. Bids cannot be lower than current price (${{ listing.price }})</label>
+                                        <input type="number" class="form-control" id="bid" min="{{ listing.price }}" placeholder="bid" value="{{listing.price}}">
+                                    </div>
+                                    <div class="form-group">
+                                        <button type="submit" class="btn btn-primary">Place bid</button>
+                                    </div>
+                                </form>
+                            </div>
                             {% endif %}
-                            <form action="{% url 'new_listing' %}" method="post">
-                                {% csrf_token %}
-                                <div class="form-group">
-                                    <label for="bid">place a bid. Bids cannot be lower than current price (${{ listing.price }})</label>
-                                    <input type="number" class="form-control" id="bid" min="{{ listing.price }}" placeholder="bid" value="{{listing.price}}">
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-primary">Place bid</button>
-                                </div>
-                            </form> 
-                        </div>
+                        {% else %}
+                            <h6>Auction is closed.</h6>
+                            {% if winning_bid is not None and winning_bid.author == user %}
+                                <div class="mb-1 text-success"><strong>you won the auction!</strong></div>
+                            {% endif %}
                         {% endif %}
                     </div>
                 </div>
@@ -61,7 +69,22 @@
                 <h3>Comments</h3>
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col-12 p-4">
-                        TODO
+                        {% for comment in listing.comments.all %}
+                            <p><strong>{{comment.author}}</strong>: {{comment.text}}</p>
+                        {% endfor %}
+
+                        {% if user.is_authenticated %}
+                        <form action="{% url 'add_comment' listing.id %}" method="post" class="ml-2">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <label for="comment">Add comment:</label>
+                                <input type="text" class="form-control" id="comment" name="comment">
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary">Save</button>
+                            </div>
+                        </form>
+                        {% endif %}
                     </div>
                 </div>
             </div>
