--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -6,7 +6,7 @@
             <div class="col-12">
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col-12 col-lg-6">
-                        <img class="img-fluid" src={{listing.image_url|default_if_none:'http://via.placeholder.com/640x360'}}>
+                        <img class="img-fluid" src="{{listing.image_url|default:'https://cdn.shopify.com/s/files/1/0533/2089/files/placeholder-images-image_large.png?format=jpg&quality=90&v=1530129081'}}">
                     </div>
                     <div class="col-12 col-lg-6 p-4">
                         <div class="mb-1 text-body-secondary">
