--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -12,6 +12,8 @@
     <hr>
 
     <div id="emails-view">
+        <h3 id="mailbox-title"></h3>
+        <div id="mailbox-content" class=""></div>
     </div>
 
     <div id="compose-view">
