complete task: view email

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -11,6 +11,11 @@
     <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
     <hr>
 
+    <div id="email-view">
+        <h3>Email details</h3>
+        <div id="email-content" class=""></div>
+    </div>
+
     <div id="emails-view">
         <h3 id="mailbox-title"></h3>
         <div id="mailbox-content" class=""></div>
