--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -1,31 +1,18 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
+    <h1>{{profile_user}}</h1>
+    <hr>
     {% if posts %}
     <h2>All Posts</h2>
-    {% if user.is_authenticated %}
-        <div class="row mb-2">
-            <div class="col-12">
-                <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col-12 p-4">
-                        <h3 class="mb-0">New Post</h3>
-                        <form id="new-post-form">
-                            <textarea class="form-control" name="content" id="content" placeholder=""></textarea>
-                            <button type="submit" class="btn btn-primary mt-2">Post</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    {% endif %}
     {% for post in posts %}
         <div class="row mb-2">
             <div class="col-12">
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col-12 p-4">
-                        <a href="{% url 'profile' post.user %}" class="d-inline-block mb-2 text-primary">
+                        <strong class="d-inline-block mb-2 text-primary">
                             {{ post.user }}
-                        </a>
+                        </strong>
                         <h3 class="mb-0">{{post.content}}</h3>
                         <div class="mb-1 text-body-secondary">{{ post.timestamp }}</div>
                         <p class="card-text mb-auto"><i class="bi bi-heart-fill"></i> {{post.likes}}</p>
