--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -11,9 +11,9 @@
         {% endif %}
     {% endif %}
     <hr>
-    {% if posts %}
+    {% if page_obj.object_list %}
     <h2>All Posts</h2>
-    {% for post in posts %}
+    {% for post in page_obj.object_list %}
         <div class="row mb-2">
             <div class="col-12">
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -29,6 +29,18 @@
             </div>
         </div>
     {% endfor %}
+    {% if page_obj.has_other_pages %}
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                {% if page_obj.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}"><span aria-hidden="true">&laquo;</span> Previous</a></li>
+                {% endif %}
+                {% if page_obj.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next <span aria-hidden="true">&raquo;</span></a></li>
+                {% endif %}
+            </ul>
+        </nav>
+    {% endif %}
     {% else %}
         <h2>Nothing to show at the moment..</h2>
     {% endif %}
