--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -28,7 +28,16 @@
                             </a>
                             <h3 class="mb-0">{{post.content}}</h3>
                             <div class="mb-1 text-body-secondary">{{ post.timestamp }}</div>
-                            <p class="card-text mb-auto"><i class="bi bi-heart-fill"></i> {{post.likes}}</p>
+                            <p class="card-text mb-auto">
+                                <button 
+                                    data-post-likes="{{post.likes.count}}" 
+                                    data-post-liked="{{post.logged_user_likes_post}}" 
+                                    data-post-id={{post.id}} class="btn btn-outline-secondary mt-2 like-button"
+                                >
+                                    <i class="bi {{post.logged_user_likes_post|yesno:'bi-heart-fill,bi-heart'}}"></i>
+                                    <span class="likes"></span>
+                                </button>
+                            </p>
                         </div>
                     </div>
                 </div>
