create basic template

--- a/scout/templates/scout/layout.html
+++ b/scout/templates/scout/layout.html
@@ -10,10 +10,39 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>        
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <link href="{% static 'scout/styles.css' %}" rel="stylesheet">
-        <script src="{% static 'scout/custom.js' %}"></script>
+        <script defer src="{% static 'scout/custom.js' %}"></script>
     </head>
     <body>
-        {% block body %}
-        {% endblock %}
-    </body>
+      {% include "scout/navbar.html" %}
+      {% include "scout/sub_header.html" %}
+      <main class="container">
+        <div class="row my-2 p-2 text-center">
+          <h1>Welcome to our community</h1>
+          <p>Here you will find suggestions on educational activities.<br>And now, <strong>Let's Scout</strong>!</p>
+        </div>
+        <div class="row p-2">
+          {% include "scout/searchbar.html" %}
+        </div>
+        <div class="row">
+          <div class="col-md-8">
+            {% block body %}
+            {% endblock %}
+          </div>
+          <div class="col-md-4">
+            {% include "scout/sidebar.html" %}
+          </div>
+        </div>
+      </main>
+    {% block script %}
+      <script type="text/javascript">
+        (() => {
+          'use strict'
+
+          document.querySelector('#navbarSideCollapse').addEventListener('click', () => {
+            document.querySelector('.offcanvas-collapse').classList.toggle('open')
+          })
+        })()
+      </script>
+    {% endblock %}
+  </body>
 </html>
