--- a/scout/templates/scout/searchbar.html
+++ b/scout/templates/scout/searchbar.html
@@ -1,7 +1,7 @@
 <div class="align-items-center p-2 my-2 text-white bg-light rounded shadow-sm">
   <div class="lh-1">
     <form id="smart-search" class="d-flex" role="search" onsubmit="return false;">
-      <input class="form-control me-2" name="query" type="search" placeholder="Search..." aria-label="Search" required>
+      <input class="form-control me-2" name="query" type="search" placeholder="Search..." aria-label="Search">
     </form>
     <div id="search-suggestion" class="py-2 d-none">
       <ul class="my-2">
