--- a/scout/templates/scout/sub_header.html
+++ b/scout/templates/scout/sub_header.html
@@ -3,16 +3,16 @@
     <nav class="nav" aria-label="Secondary navigation">
       <a class="nav-link active" aria-current="page" href="#">Tags:</a>
       <a class="nav-link" href="#">
-        Friends
+        Outdoor
         <span class="badge text-bg-light rounded-pill align-text-bottom">27</span>
       </a>
-      <a class="nav-link" href="#">Explore</a>
+      <a class="nav-link" href="#">Indoor</a>
       <a class="nav-link" href="#">Suggestions</a>
-      <a class="nav-link" href="#">Link</a>
-      <a class="nav-link" href="#">Link</a>
-      <a class="nav-link" href="#">Link</a>
-      <a class="nav-link" href="#">Link</a>
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" href="#">Team</a>
+      <a class="nav-link" href="#">Unit</a>
+      <a class="nav-link" href="#">Single</a>
+      <a class="nav-link" href="#">In-person</a>
+      <a class="nav-link" href="#">Online</a>
     </nav>
   </div>
 </div>
