--- a/scout/templates/scout/sidebar.html
+++ b/scout/templates/scout/sidebar.html
@@ -2,17 +2,47 @@
     <div class="p-4 mb-3 bg-light rounded shadow-sm">
         <h4 class="fst-italic">Categories</h4>
         <ol class="list-unstyled">
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
+            <li class="mb-2">
+                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Lupetti</title>
+                    <rect class="l" width="100%" height="100%" fill="#007bff"/>
+                    <text x="50%" y="50%" fill="#ffffff" dy=".3em">L</text>
+                </svg>
+                <a href="#">
+                    Lupetti
+                </a>
+            </li>
+            <li class="mb-2">
+                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Esploratori</title>
+                    <rect class="e" width="100%" height="100%" fill="#007bff"/>
+                    <text x="50%" y="50%" fill="#ffffff" dy=".3em">E</text>
+                </svg>
+                <a href="#">
+                    Esploratori
+                </a>
+            </li>
+            <li class="mb-2">
+                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Rover</title>
+                    <rect class="r" width="100%" height="100%" fill="#007bff"/>
+                    <text x="50%" y="50%" fill="#ffffff" dy=".3em">R</text>
+                </svg>
+                <a href="#">
+                    Rover
+                </a>
+            </li>
         </ol>
     </div>
 
     <div class="p-4 mb-3 bg-light rounded shadow-sm">
         <h4 class="fst-italic">Tags</h4>
-        <ol class="list-unstyled mb-0">
-            <li><a href="#"><i class="bi bi-tag-fill"></i>outdoor</a></li>
+        <ol class="list-unstyled mb-0 border-bottom">
+            <li class="mb-2"><a href="#"><i class="bi bi-tag"></i>outdoor</a></li>
         </ol>
+        <small class="d-block text-end mt-3">
+            <a href="#">All tags</a>
+        </small>
     </div>
 
 </div>
