--- a/scout/templates/scout/activity-card-small.html
+++ b/scout/templates/scout/activity-card-small.html
@@ -1,18 +1,20 @@
 <!-- activity card small -->
 <div class="d-flex text-body-secondary pt-3">
     <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
-    <title>Rover</title>
-    <rect class="r" width="100%" height="100%" fill="#007bff"/>
-    <text x="50%" y="50%" fill="#ffffff" dy=".3em">R</text>
+        <rect class="{{ activity.age_range|lower}}" width="100%" height="100%" fill="#007bff"/>
+        <text x="50%" y="50%" fill="#ffffff" dy=".3em">{{ activity.age_range}}</text>
     </svg>
     <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
     <div class="d-flex justify-content-between">
-        <strong class="text-gray-dark">Tic Tac Toe</strong>
+        <strong class="text-gray-dark">{{ activity.title }}</strong>
         <a href="#">more info</a>
     </div>
         <div class="tags">
-        <a class="tag" href="#"><i class="bi bi-tag"></i>in-person activity</a>
-        <a class="tag" href="#"><i class="bi bi-tag"></i>online activity</a>
+        <a class="tag" href="#"><i class="bi bi-tag"></i>{{ activity.location_name }}</a>
+        <a class="tag" href="#"><i class="bi bi-tag"></i>{{ activity.game_mode_name }}</a>
+        {% if activity.is_suitable_for_disabled %}
+        <a class="tag" href="#"><i class="bi bi-tag"></i>suitable for disabled</a>
+        {% endif %}
     </div>
     </div>
 </div>
