--- a/scout/templates/scout/activity-card.html
+++ b/scout/templates/scout/activity-card.html
@@ -2,19 +2,21 @@
 <div class="row py-3 border-bottom">
     <div class="col-12 d-flex">
     <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
-        <title>Lupetti</title>
-        <rect class="l" width="100%" height="100%" fill="#007bff"/>
-        <text x="50%" y="50%" fill="#ffffff" dy=".3em">L</text>
+        <rect class="{{ activity.age_range|lower}}" width="100%" height="100%" fill="#007bff"/>
+        <text x="50%" y="50%" fill="#ffffff" dy=".3em">{{ activity.age_range}}</text>
     </svg>
     <p class="pb-3 mb-0 small">
-        <strong class="d-block text-gray-dark">Rock Scissors Paper</strong>
-        Some representative placeholder content, with some information about this user. Imagine this being some sort of status update, perhaps?
+        <strong class="d-block text-gray-dark">{{ activity.title }}</strong>
+        {{ activity.method|truncatewords_html:10}}
     </p>
     </div>
     <div class="col-12">
     <div class="tags">
-        <a class="tag" href="#"><i class="bi bi-tag"></i>outdoor</a>
-        <a class="tag" href="#"><i class="bi bi-tag"></i>indoor</a>
+        <a class="tag" href="#"><i class="bi bi-tag"></i>{{ activity.location_name }}</a>
+        <a class="tag" href="#"><i class="bi bi-tag"></i>{{ activity.game_mode_name }}</a>
+        {% if activity.is_suitable_for_disabled %}
+        <a class="tag" href="#"><i class="bi bi-tag"></i>suitable for disabled</a>
+        {% endif %}
     </div>
     <p class="text-end m-0">
         <a href="#">More info</a>
