--- a/scout/templates/scout/sidebar.html
+++ b/scout/templates/scout/sidebar.html
@@ -38,7 +38,9 @@
     <div class="p-4 mb-3 bg-light rounded shadow-sm">
         <h4 class="fst-italic">Tags</h4>
         <ol class="list-unstyled mb-0 border-bottom">
-            <li class="mb-2"><a href="#"><i class="bi bi-tag"></i>outdoor</a></li>
+            <li class="mb-2"><a href="#"><i class="bi bi-tag"></i>team</a></li>
+            <li class="mb-2"><a href="#"><i class="bi bi-tag"></i>unit</a></li>
+            <li class="mb-2"><a href="#"><i class="bi bi-tag"></i>single</a></li>
         </ol>
         <small class="d-block text-end mt-3">
             <a href="#">All tags</a>
