--- a/scout/templates/scout/sidebar.html
+++ b/scout/templates/scout/sidebar.html
@@ -1,6 +1,6 @@
 <div class="position-sticky" style="top: 2rem;">
     <div class="p-4 mb-3 bg-light rounded shadow-sm">
-        <h4 class="fst-italic">Categories</h4>
+        <h4 class="fst-italic">Browse by age range</h4>
         <ol class="list-unstyled">
             <li class="mb-2">
                 <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -8,7 +8,7 @@
                     <rect class="l" width="100%" height="100%" fill="#007bff"/>
                     <text x="50%" y="50%" fill="#ffffff" dy=".3em">L</text>
                 </svg>
-                <a href="#">
+                <a href="{% url 'category' category='lupetti' %}">
                     Lupetti
                 </a>
             </li>
@@ -18,7 +18,7 @@
                     <rect class="e" width="100%" height="100%" fill="#007bff"/>
                     <text x="50%" y="50%" fill="#ffffff" dy=".3em">E</text>
                 </svg>
-                <a href="#">
+                <a href="{% url 'category' category='esploratori' %}">
                     Esploratori
                 </a>
             </li>
@@ -28,7 +28,7 @@
                     <rect class="r" width="100%" height="100%" fill="#007bff"/>
                     <text x="50%" y="50%" fill="#ffffff" dy=".3em">R</text>
                 </svg>
-                <a href="#">
+                <a href="{% url 'category' category='rover' %}">
                     Rover
                 </a>
             </li>
@@ -36,7 +36,7 @@
     </div>
 
     <div class="p-4 mb-3 bg-light rounded shadow-sm">
-        <h4 class="fst-italic">Tags</h4>
+        <h4 class="fst-italic">Browse by Tags</h4>
         <ol class="list-unstyled mb-0 border-bottom">
             <li class="mb-2"><a href="#"><i class="bi bi-tag"></i>team</a></li>
             <li class="mb-2"><a href="#"><i class="bi bi-tag"></i>unit</a></li>
