--- a/scout/templates/scout/index.html
+++ b/scout/templates/scout/index.html
@@ -13,7 +13,6 @@
 
   <div class="my-3 p-3 bg-body rounded shadow-sm">
     <h2 class="border-bottom pb-2 mb-0">Popular</h2>
-    <!-- TODO: render popular dinamically -->
-    {% include "scout/activity-card-small.html" %}
+    <!-- TODO: list activity-card-small -->
   </div>
 {% endblock %}
