--- a/scout/templates/scout/navbar.html
+++ b/scout/templates/scout/navbar.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="#">Latest</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tags</a>
+                    <a class="nav-link" href="{% url 'tags' %}">Tags</a>
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
