--- a/scout/templates/scout/tag.html
+++ b/scout/templates/scout/tag.html
@@ -1,11 +1,12 @@
 {% extends "scout/layout.html" %}
+{% block title %}Tag: {{ tag|capfirst }}{% endblock %}
 
 {% block body %}
     <div class="my-3 p-3 bg-body rounded shadow-sm">
       <small class="d-block text-end mt-3">
           <a href="{% url 'tags' %}">All tags</a>
       </small>
-      <h2 class="border-bottom pb-2 mb-0"><i class="bi bi-tag"></i> {{ tag|capfirst }}</h2>
+      <h2 class="border-bottom pb-2 mb-0"><i class="bi bi-tag"></i> Tag: {{ tag|capfirst }}</h2>
       <div class="container">
         {% if activities.object_list %}
           {% for activity in activities.object_list %}
@@ -14,6 +15,22 @@
         {% else %}
           <p class="p-2">Nessuna attività disponibile per questo tag.</p>
         {% endif %}
+      </div>
+    </div>
+    <div class="my-3 p-3 bg-body">
+      <div class="container">
+      {% if activities.has_other_pages %}
+      <nav aria-label="Page navigation example">
+          <ul class="pagination">
+              {% if activities.has_previous %}
+                  <li class="page-item"><a class="page-link" href="?page={{ activities.previous_page_number }}"><span aria-hidden="true">&laquo;</span> Previous</a></li>
+              {% endif %}
+              {% if activities.has_next %}
+              <li class="page-item"><a class="page-link" href="?page={{ activities.next_page_number }}">Next <span aria-hidden="true">&raquo;</span></a></li>
+              {% endif %}
+          </ul>
+      </nav>
+      {% endif %}
       </div>
     </div>
 {% endblock %}
