--- a/scout/templates/scout/tags.html
+++ b/scout/templates/scout/tags.html
@@ -1,8 +1,9 @@
 {% extends "scout/layout.html" %}
+{% block title %}Tags{% endblock %}
 
 {% block body %}
     <div class="my-3 p-3 bg-body rounded shadow-sm">
-      <h2 class="border-bottom pb-2 mb-0">Tags</h2>
+      <h2 class="border-bottom pb-2 mb-0">All Tags</h2>
       <div class="container">
         <div class="row p-4">
           {% for key, value in tags %}
