--- a/scout/templates/scout/activity-card-small.html
+++ b/scout/templates/scout/activity-card-small.html
@@ -9,12 +9,15 @@
         <strong class="text-gray-dark">{{ activity.title }}</strong>
         <a href="#">more info</a>
     </div>
-        <div class="tags">
+    <div class="tags">
         <a class="tag" href="{% url 'tag' tag=activity.location %}"><i class="bi bi-tag"></i>{{ activity.location_name }}</a>
         <a class="tag" href="{% url 'tag' tag=activity.game_mode %}"><i class="bi bi-tag"></i>{{ activity.game_mode_name }}</a>
         {% if activity.is_suitable_for_disabled %}
         <a class="tag" href="{% url 'tag' tag='is_suitable_for_disabled' %}"><i class="bi bi-tag"></i>suitable for disabled</a>
         {% endif %}
+    </div>
+    <div class="likes text-end">
+        <p>Likes: {{activity.likes.count}}</p>
     </div>
     </div>
 </div>
