--- a/scout/templates/scout/index.html
+++ b/scout/templates/scout/index.html
@@ -16,7 +16,14 @@
     </div>
 
   <div class="my-3 p-3 bg-body rounded shadow-sm">
-    <h2 class="border-bottom pb-2 mb-0">Popular</h2>
-    <!-- TODO: list activity-card-small -->
+    <h2>Popular</h2>
+          <small class="d-block text-end border-bottom ">
+          <a href="{% url 'popular' %}">More</a>
+      </small>
+      <div class="container">
+        {% for activity in popular_activities %}
+          {% include "scout/activity-card-small.html" %}
+        {% endfor %}
+      </div>
   </div>
 {% endblock %}
