change results layout

--- a/scout/templates/scout/index.html
+++ b/scout/templates/scout/index.html
@@ -22,7 +22,7 @@
       </small>
       <div class="container">
         {% for activity in popular_activities %}
-          {% include "scout/activity-card-small.html" %}
+          {% include "scout/activity-card.html" %}
         {% endfor %}
       </div>
   </div>
