--- a/scout/templates/scout/popular.html
+++ b/scout/templates/scout/popular.html
@@ -6,7 +6,7 @@
       <h2 class="border-bottom pb-2 mb-0">Popular activities</h2>
       <div class="container">
         {% for activity in popular_activities %}
-          {% include "scout/activity-card.html" %}
+          {% include "scout/activity-card-small.html" %}
         {% endfor %}
       </div>
     </div>
