--- a/scout/templates/scout/latest.html
+++ b/scout/templates/scout/latest.html
@@ -6,7 +6,7 @@
       <h2 class="border-bottom pb-2 mb-0">Latest activities</h2>
       <div class="container">
         {% for activity in latest_activities %}
-          {% include "scout/activity-card.html" %}
+          {% include "scout/activity-card-small.html" %}
         {% endfor %}
       </div>
     </div>
