--- a/scout/templates/scout/activity-card.html
+++ b/scout/templates/scout/activity-card.html
@@ -20,7 +20,7 @@
     </div>
     <p>Likes: {{activity.likes.count}}</p>
     <p class="text-end m-0">
-        <a href="#">More info</a>
+        <a href="/activity/{{activity.id}}">More info</a>
     </p>
     </div>
 </div>
