--- a/scout/templates/scout/activity-card-small.html
+++ b/scout/templates/scout/activity-card-small.html
@@ -16,8 +16,16 @@
         <a class="tag" href="{% url 'tag' tag='is_suitable_for_disabled' %}"><i class="bi bi-tag"></i>suitable for disabled</a>
         {% endif %}
     </div>
-    <div class="likes text-end">
-        <p>Likes: {{activity.likes.count}}</p>
+    <div class="text-end like-button-div">
+        <button
+            data-activity-likes="{{activity.likes.count}}" 
+            data-activity-liked="{{activity.logged_user_likes_activity}}" 
+            data-activity-id={{activity.id}} 
+            class="p-1 btn btn-link like-button"
+        >
+            <i class="bi {{activity.logged_user_likes_activity|yesno:'bi-star-fill,bi-star'}}"></i>
+            <span class="h6 likes"></span>
+        </button>
     </div>
     </div>
 </div>
