--- a/scout/templates/scout/navbar.html
+++ b/scout/templates/scout/navbar.html
@@ -26,14 +26,17 @@
                     <a class="nav-link {% if current_page == 'tags' %} active {% endif %}" href="{% url 'tags' %}">Tags</a>
                 </li>
                 {% if user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link">|</a></li>
+                    <li class="nav-item d-md-none d-lg-block"><a class="nav-link">|</a></li>
                     <li class="nav-item">
                         <a class="nav-link {% if current_page == 'favourites' %} active {% endif %}" href="{% url 'favourites' %}">My favourites</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if current_page == 'new activity' %} active {% endif %}" href="#">New Activity</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link">|</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if current_page == 'my_activities' %} active {% endif %}" href="{% url 'my_activities' %}">My Activities</a>
+                    </li>
+                    <li class="nav-item d-md-none d-lg-block"><a class="nav-link">|</a></li>
                 {% endif %}
                 {% if user.is_authenticated %}
                     <li class="nav-item">
